<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.silviaalcon.proyectofinal.About"
    android:background="@color/icons"
    android:layout_centerInParent="true">

    <TextView
        android:id="@+id/ab_txt1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sobre"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_text"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_below="@+id/ab_txt1"
        android:id="@+id/ab_txt2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MiNombre"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text" />

    <TextView
        android:layout_below="@id/ab_txt2"
        android:id="@+id/ab_txt3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Correo"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_text"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_below="@+id/ab_txt3"
        android:id="@+id/ab_txt4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MiCorreo"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text" />

    <TextView
        android:layout_below="@id/ab_txt4"
        android:id="@+id/ab_txt5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Descripcion"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="10dp"
        android:textColor="@color/primary_text"
        android:textStyle="bold|italic"/>

    <TextView
        android:layout_below="@+id/ab_txt5"
        android:id="@+id/ab_txt6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/MiDescripcion"
        android:textAlignment="center"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text" />

    <TextView
        android:id="@+id/ab_txt7"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Pie"
        android:layout_margin="10dp"
        android:textColor="@color/primary_text"
        android:textStyle="bold|italic"/>

    <Button
        android:layout_above="@id/ab_txt7"
        android:id="@+id/btn_volver"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:gravity="center"
        android:layout_centerInParent="true"
        android:background="@drawable/btn_relleno"
        android:text="@string/ab_boton"
        android:textColor="@color/icons"/>

</RelativeLayout>
